k8s-configs/ping-cloud/test/base/pingdataconsole/deployment.yaml
# This defines the ping data console deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingdataconsole
spec:
  replicas: 1
  template:
    metadata:
      name: pingdataconsole
      annotations:
        lastUpdateTime: "NA"
    spec:
      serviceAccount: ping-serviceaccount
      containers:
      - name: pingdataconsole
        image: pingidentity/pingdataconsole:2006.1-8.1.0.0
        resources:
          requests:
            memory: 512Mi
            cpu: 10m
          limits:
            memory: 512Mi
            cpu: 10m
        ports:
        - containerPort: 8080
          name: http
        envFrom:
        - secretRef:
            name: devops-secret
            optional: true
        - secretRef:
            name: git-auth-cred
            optional: true
